# gotta-go

./: .gitignore  CLAUDE.md  NOTICE  README.md
.config/: wt.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  deploy-worker.yml
bruno/: bruno.json  office-weekday-commute.bru  office-weekend-calendar.bru  office-weekend-dad-jokes.bru
bruno/environments/: local.bru
docs/: arduino-lsp-nvim.md  glossary.md  metlink-api-swagger.json  worker-architecture.md  worker-frame-request.md
docs/PRD/: GottaGo PRD v0.4.md  GottaGo PRD.md  Metlink PRD v0.3.md  priority_split_v2_delta.md
docs/UI/: GottaGo - UI_UX Design Reference.md  GottaGo — UI_UX Design Reference.md  Home Transit Radiator — UI_UX Design Reference.md  transit-radiator-ui-spec-no-design-system.html
docs/adr/: 0001-frame-transport-compression.md  0002-metlink-stop-predictions-field-mapping.md  0003-radiator-worker-contract.md  0004-diagnostics-view-content-negotiation.md  0005-worker-source-architecture.md  0006-radiator-firmware-toolchain.md  0007-worker-architectural-pillars.md  0008-radiator-gzip-decompression.md  0009-display-typeface-dejavu-sans-bold.md  0010-no-metlink-cache-layer.md  0011-error-contract-problem-details.md  0012-radiator-host-native-tests.md  0013-conditional-frame-requests.md  0014-error-screen-diagnostics-footer.md  0014-layout-service-depth-and-context-slices.md  0015-profile-phase-active-days.md  0016-file-header-comments.md  0016-gateway-contract-implementation-split.md  0016-gateways.md  0017-feature-services.md  README.md
docs/agents/: domain.md  worker-architecture.md
docs/api/: errors.md  openapi.yaml
docs/architecture/: gotta-go-solution-architecture.drawio
docs/plans/: .$Refactor-RenderContext.drawio.bkp  Refactor-RenderContext.drawio  gh17-idle-jokes-layout.md  gh25-worker-observability.md  gh4-minimal-clock-frame.md  gh5-priority-split-single-target.md  gh60-firmware-problem-json-error-screen.md  rename-feature-bmp-to-view.md
docs/reference/: metlink-stop-predictions.md
poc/: .gitignore
poc/kv-cache/: .gitignore  hand-off-next-steps.md  package.json  plan.md  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
poc/satori/: index.mjs  package.json  pnpm-lock.yaml
poc/satori-dx/: index.html  package.json  pnpm-lock.yaml
poc/satori-mode-icons/: README.md  index.tsx  package.json  pnpm-lock.yaml
poc/satori-react/: index.jsx  package.json  pnpm-lock.yaml
poc/to-bmp/: hand-off-next-steps.md  index.ts  package.json  plan.md  pnpm-lock.yaml
poc/worker/: README.md  hand-off-next-steps.md  package.json  plan.md  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
src/radiator/: .clang-format  .clangd  .gitignore  README.md  battery.cpp  battery.h  compile_commands.json  etag.h  flash.sh  frame.cpp  frame.h  gen_compile_commands.py  mise.toml  net.cpp  net.h  package.json  problem.cpp  problem.h  radiator.ino  secrets.example.h  settings.example.h  sketch.yaml  sleep.cpp  (+2 more)
src/radiator/test/: CMakeLists.txt  README.md  test_etag.cpp  test_frame.cpp  test_problem.cpp  test_sleep.cpp
src/radiator/test/stubs/: Arduino.h  epd_driver.h  firasans.h
tests/: .env.example  mise.toml  smoke-prod-test.sh
tools/: export_radiator_logs.py
(+236 files in other folders)
